Fixed spacing for messaging div

--- a/public/css/messaging.css
+++ b/public/css/messaging.css
@@ -33,3 +33,7 @@
     border: none;
     opacity: 0.9;
 }
+
+.div-message{
+    margin-left: 5%;
+}
